--- a/themes/custom/layouts/baseof.html
+++ b/themes/custom/layouts/baseof.html
@@ -35,11 +35,6 @@
 
     <!--  -->
 
-    {{ block "main" . }}{{ end }}
-
-
-    {{ partial "footer.html" . }}
-
-
+    {{ block "main" . }}{{ end }} {{ partial "footer.html" . }}
   </body>
 </html>
