--- a/themes/custom/layouts/single.blog.html
+++ b/themes/custom/layouts/single.blog.html
@@ -68,6 +68,27 @@
       <p>Última atualização: {{ .Lastmod.Format "02/01/2006" }}</p>
     </div>
 
+    <div id="disqus_thread"></div>
+    <script>
+      var disqus_config = function () {
+        this.page.url = "{{ .Permalink }}"; // URL completa do post
+        this.page.identifier = "{{ .File.Path }}"; // Identificador único do post
+      };
+
+      (function () {
+        // DON'T EDIT BELOW THIS LINE
+        var d = document,
+          s = d.createElement("script");
+        s.src = "https://desenhandocommack.disqus.com/embed.js";
+        s.setAttribute("data-timestamp", +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript
+      >Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript
+    >
+
     <div class="blog-pagination">
       {{ with .PrevInSection }}
       <a href="{{ .RelPermalink }}">« Anterior</a>
