--- a/themes/custom/layouts/baseof.html
+++ b/themes/custom/layouts/baseof.html
@@ -28,6 +28,12 @@
     <link rel="icon" type="image/x-icon" sizes="32x32" href="/images/favicon-32x32.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9490703409315867"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
