--- a/themes/custom/layouts/baseof.html
+++ b/themes/custom/layouts/baseof.html
@@ -42,5 +42,9 @@
     <!--  -->
 
     {{ block "main" . }}{{ end }} {{ partial "footer.html" . }}
+
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 </html>
