--- a/themes/custom/layouts/single.blog.html
+++ b/themes/custom/layouts/single.blog.html
@@ -55,13 +55,12 @@
     <div class="post-ad">
       <ins
         class="adsbygoogle"
-        style="display: block; max-width: 970px; width: 100%; height: 90px"
-        data-ad-client="ca-pub-XXXXXX"
-        data-ad-slot="YYYYYY"
+        style="display: block; text-align: center"
+        data-ad-layout="in-article"
+        data-ad-format="fluid"
+        data-ad-client="ca-pub-9490703409315867"
+        data-ad-slot="4100106388"
       ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
     </div>
 
     <div class="post-footer">
