--- a/themes/custom/layouts/list.blog.html
+++ b/themes/custom/layouts/list.blog.html
@@ -68,15 +68,15 @@
     <!-- Inserir anúncio a cada 4 posts -->
     {{ if eq (mod $i 4) 0 }}
     <div class="blog-ad">
+      <!-- Bloco entre posts -->
       <ins
         class="adsbygoogle"
-        style="display: block; max-width: 970px; width: 100%; height: 90px"
-        data-ad-client="ca-pub-XXXXXX"
-        data-ad-slot="YYYYYY"
+        style="display: block"
+        data-ad-client="ca-pub-9490703409315867"
+        data-ad-slot="2881010591"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
       ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
     </div>
     {{ end }}
 
