--- a/themes/custom/layouts/_partials/sidebar.html
+++ b/themes/custom/layouts/_partials/sidebar.html
@@ -2,17 +2,25 @@
 <aside class="blog-sidebar">
   <div class="blog-widget">
     <h3>Destaques</h3>
+
     <div class="blog-widget">
-      <h3>Anúncio</h3>
-      <img src="/images/anuncio.jpg" alt="Anúncio" />
+      <!-- Bloco lateral -->
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-9490703409315867"
+        data-ad-slot="3158559800"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
     </div>
 
     <ul>
       <li>
         <a href="https://go.hotmart.com/I98301009X?dp=1" class="highlight-link-sidebar">
           <img src="/images/sidebar/sidebar-cursokrita.png" alt="Produto 1" class="highlight-img" />Aprenda a usar o
-          Krita</a
-        >
+          Krita
+        </a>
       </li>
       <li>
         <a href="https://www.youtube.com/c/DesenhandocomMack" class="highlight-link-sidebar">
@@ -24,7 +32,14 @@
   </div>
 
   <div class="blog-widget">
-    <h3>Anúncio</h3>
-    <img src="/images/anuncio.jpg" alt="Anúncio" />
+    <!-- Bloco lateral -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-9490703409315867"
+      data-ad-slot="3158559800"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
   </div>
 </aside>
