--- a/themes/custom/assets/styles/blog.css
+++ b/themes/custom/assets/styles/blog.css
@@ -33,8 +33,6 @@ body {
 
 /* ===== Card de cada post ===== */
 .blog-card {
-  display: flex; /* organiza conteúdo verticalmente */
-  flex-direction: column;
   margin-bottom: 2px; /* espaço entre cards */
   transition: transform 0.9s ease, box-shadow 0.2s ease; /* animação suave ao hover */
   position: relative; /* necessário para overlay absoluto */
@@ -109,11 +107,7 @@ body {
 
 /* ===== Blocos de anúncios dentro da coluna de posts ===== */
 .blog-ad {
-  grid-column: 1 / -1; /* ocupa toda a largura do grid */
-  margin: 20px 0 60px 0; /* topo 20px, inferior 60px */
-  display: flex;
-  justify-content: center; /* centraliza horizontalmente */
-  background-color: #0077cc;
+  overflow: hidden;
 }
 
 .blog-ad ins {
