--- a/themes/custom/assets/styles/blog.css
+++ b/themes/custom/assets/styles/blog.css
@@ -289,6 +289,16 @@ body {
        ESTILIZAÇÃO DO POST
 ================================*/
 
+/*Dicas*/
+.box-dicas {
+  /*background-color: lightgreen;*/
+  border: 3px solid lightgreen;
+  padding: 1.7rem;
+  font-size: 1.05rem;
+  font-weight: 500;
+  margin: 0;
+}
+
 /* ===== Container principal do post ===== */
 .post-container {
   display: flex; /* Post + sidebar lado a lado */
@@ -371,7 +381,7 @@ body {
 
 /* ===== Descrição do post ===== */
 .post-meta .post-description {
-  font-size: 1rem;
+  font-size: 1.05rem;
   color: var(--color-text);
   margin: 15px 0; /* força 15px acima e abaixo */
 }
@@ -434,6 +444,13 @@ body {
   color: var(--color-text);
 }
 
+.post-content p {
+  /* Espaçamento */
+  line-height: 1.6; /* altura da linha (melhora a legibilidade) */
+  font-size: 1.05rem;
+  padding-bottom: 1.05rem;
+}
+
 /* Diminui a largura do conteúdo do post individual */
 .post-content-area {
   max-width: 900px;
@@ -451,7 +468,7 @@ body {
 }
 
 .post-content > * {
-  margin-top: 40px;
+  /*margin-top: 40px;*/
   margin-bottom: 40px;
 }
 
@@ -464,15 +481,15 @@ body {
   margin: 1.1em 0 0.55em;
 }
 .post-content h3 {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   margin: 1em 0 0.5em;
 }
 .post-content h4 {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   margin: 0.9em 0 0.45em;
 }
 .post-content h5 {
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: 0.8em 0 0.4em;
 }
 .post-content h6 {
@@ -492,10 +509,9 @@ body {
   margin-bottom: 6px;
 }
 .post-content img {
-  margin: 55px auto;
+  margin: 25px auto;
   max-width: 100%;
   height: auto;
-  border-radius: 10px;
   display: block;
 }
 
