--- a/themes/custom/layouts/list.blog.html
+++ b/themes/custom/layouts/list.blog.html
@@ -41,8 +41,12 @@
       <!-- Imagem com overlay -->
       <div class="blog-card-image-wrapper">
         <a href="{{ .RelPermalink }}">
-          {{ with .Params.featuredImage }}
-          <img class="blog-card-image" src="{{ . }}" alt="{{ $.Title }}" />
+          {{ $p := . }}
+          <!--  -->
+          {{ with .Resources.GetMatch "cover.*" }}
+          <img class="blog-card-image" src="{{ .RelPermalink }}" alt="{{ $p.Title }}" />
+          {{ else with .Params.featuredImage }}
+          <img class="blog-card-image" src="{{ . }}" alt="{{ $p.Title }}" />
           {{ end }}
 
           <div class="blog-card-overlay">
